@@ -7,6 +7,8 @@
 * Corrected scaling of volume plugin for HiDPI monitors.
 * Fixed connection name dropdown list in netstatus plugin.
 * Added option to battery monitor to hide number of battery in tooltip.
+* Added option to resource monitors to show cached and buffered memory as
+    used.
 
 0.10.0
 -------------------------------------------------------------------------
